# spyder-unittest

./: .ciocheck  .coveragerc  .gitignore  .scrutinizer.yml  .travis.yml  AUTHORS  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  RELEASE.md  appveyor.yml  circle.yml  crowdin.yml  p_unittesting.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
.circleci/: config.yml
.github/: issue_template.md
.github/scripts/: generate-without-spyder.py
.github/workflows/: linux-tests.yml  macos-tests.yml  run-tests.yml  windows-tests.yml
conda.recipe/: meta.yaml
continuous_integration/circle/: coverage.sh  install.sh  run_tests.sh
doc/example/: test_foo.py
requirements/: conda.txt  tests.txt
spyder_unittest/: __init__.py  unittest.py  unittesting.py  unittestplugin.py
spyder_unittest/backend/: __init__.py  abbreviator.py  frameworkregistry.py  jsonstream.py  nose2runner.py  noserunner.py  pytestrunner.py  pytestworker.py  runnerbase.py  testrunner.py  unittestrunner.py  zmqreader.py  zmqstream.py
spyder_unittest/backend/tests/: __init__.py  test_abbreviator.py  test_frameworkregistry.py  test_jsonstream.py  test_nose2runner.py  test_noserunner.py  test_pytestrunner.py  test_runnerbase.py  (+4 more)
spyder_unittest/locale/: spyder_unittest.pot
spyder_unittest/tests/: conftest.py  test_unittestplugin.py
spyder_unittest/widgets/: __init__.py  configdialog.py  confpage.py  datatree.py  unittestgui.py  unittestinggui.py
spyder_unittesting/: __init__.py  unittesting.py
spyder_unittesting/widgets/: unittestinggui.py
test/: test_examples.py
widgets/: unittestinggui.py
(+35 files in other folders)
