[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spyder-unittest"
description = "Plugin to run tests from within the Spyder IDE"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [{name = "Spyder Project Contributors"}]
keywords = ["Qt", "PyQt5", "PyQt6", "spyder", "plugins", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)"
]
urls = {source = "https://github.com/spyder-ide/spyder-unittest"}
dependencies = ["lxml", "spyder>=6,<7", "pyzmq"]
dynamic = ["version"]

[project.entry-points."spyder.plugins"]
unittest = "spyder_unittest.unittestplugin:UnitTestPlugin"

[tool.setuptools.dynamic]
version = {attr = "spyder_unittest.__version__"}
